Better minicart overlay + Fix minicart height on small pages

--- a/src/App.scss
+++ b/src/App.scss
@@ -105,8 +105,16 @@ html {
 }
 
 .App {
+    position: relative;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     font-family: "Raleway", sans-serif;
+}
+
+.overlay {
+    position: absolute;
+    background-color: var(--c-gray-overlay);
+    height: 100%;
+    width: 100%;
 }
