--- a/src/components/header/styles/header.module.scss
+++ b/src/components/header/styles/header.module.scss
@@ -1,4 +1,5 @@
 .header {
+    z-index: 10;
     display: grid;
     grid-template-columns: 1fr auto 1fr;
     grid-template-rows: auto;
