--- a/src/components/header/styles/headerCart.module.scss
+++ b/src/components/header/styles/headerCart.module.scss
@@ -33,13 +33,21 @@
 }
 
 .minicart {
+    z-index: 10;
     position: absolute;
     top: 100%;
     right: -0.875rem;
     min-width: 20.313rem;
+    max-height: calc(100vh - 5rem);
     padding: 0.5rem 1rem 1.25rem 1rem;
     background-color: white;
-    z-index: 10;
+    overflow-y: scroll;
+    -ms-overflow-style: none; /* Hide scrollbar for IE and Edge */
+    scrollbar-width: none; /* Hide scrollbar for Firefox */
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    &::-webkit-scrollbar {
+        display: none;
+    }
 }
 
 .itemsCounter {
