--- a/src/components/plp/styles/plp.module.scss
+++ b/src/components/plp/styles/plp.module.scss
@@ -2,12 +2,3 @@
     flex-grow: 1;
     position: relative;
 }
-
-.overlay {
-    background-color: var(--c-gray-overlay);
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-}
